additional filters, filter with default frequencies

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -54,7 +54,8 @@
     "import numpy as np\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
     "import ipywidgets as widgets\n",
-    "from ipywidgets import Button, Layout\n",
+    "from ipywidgets import Button, Layout, HBox, VBox\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -117,12 +118,24 @@
    "outputs": [],
    "source": [
     "#plot initialisation\n",
-    "filt = False\n",
+    "nofilt = False\n",
+    "bpfilt = False\n",
+    "lpfilt = False\n",
+    "hpfilt = False\n",
     "corners = 2\n",
     "zerophase = False\n",
     "defscale = 1e4\n",
+    "# defscale_acou = 1e2\n",
     "scale = defscale\n",
     "magn = 1\n",
+    "\n",
+    "#the next default filter values are set in widget functions. but if the default frequencies are not altered\n",
+    "#they are not set\n",
+    "global blp, bhp, llp, hhp #don't like this but not sure better solution as need visible in a function\n",
+    "blp = 2\n",
+    "bhp = 6\n",
+    "llp = 1\n",
+    "hhp = 5\n",
     "\n",
     "#size ratio to match aspect ratio of print paper\n",
     "xsize = 3200\n",
@@ -181,46 +194,101 @@
     "    print ('data retrieved')\n",
     "    print (tr)\n",
     "\n",
-    "def bandpass(bp):\n",
-    "  global lp, hp\n",
-    "  lp, hp  = bp['new']\n",
+    "#no filter\n",
+    "def nofilter(a):\n",
+    "    #no filter check box\n",
+    "    global nofilt  \n",
+    "    nofilt = a['new']\n",
+    "    \n",
+    "#bandpass\n",
+    "def bpfilter(f):\n",
+    "    #bandpass filter check box\n",
+    "    global bpfilt\n",
+    "    bpfilt = f['new']\n",
+    "        \n",
+    "def bandpass(b):\n",
+    "    #two slider values\n",
+    "    global blp, bhp\n",
+    "    blp, bhp  = b['new']\n",
+    "        \n",
+    "#lowpass\n",
+    "def lpfilter(d):\n",
+    "    #lowpass filter check box\n",
+    "    global lpfilt  \n",
+    "    lpfilt = llp\n",
+    "    lpfilt = d['new']\n",
+    "#     lpfilt = d\n",
+    "    \n",
+    "def lowpass(e):\n",
+    "    #single slider value\n",
+    "    global llp\n",
+    "    llp = e['new']\n",
+    "    \n",
+    "#highpass\n",
+    "def hpfilter(h):\n",
+    "    #highpass filter check box\n",
+    "    global hpfilt  \n",
+    "    hpfilt = h['new']\n",
+    "    \n",
+    "def highpass(i):\n",
+    "    #single slider value\n",
+    "    global hhp\n",
+    "    hhp = i['new']\n",
+    "#     hhp = i\n",
     "\n",
-    "def filter(f):\n",
-    "  global filt  \n",
-    "  filt = f['new']\n",
-    "\n",
+    "#plot gain\n",
     "def gain(g):\n",
     "  global magn, scale\n",
     "  magn = g['new']\n",
     "  scale = defscale / magn\n",
     "\n",
     "def screen(c):\n",
-    "    if (filt):\n",
-    "        trcp = tr.copy()\n",
-    "        trcp.filter('bandpass', freqmin=lp, freqmax=hp, corners=corners, zerophase=zerophase)\n",
-    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
-    "    else:\n",
+    "    if (nofilt):\n",
     "        title = site + '_' + pdate + '_nofilt'+'_plot-gain_'+str(magn)\n",
     "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "    if (bpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('bandpass', freqmin=blp, freqmax=bhp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_bandpass_'+str(blp)+'-'+str(bhp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "    if (lpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('lowpass', freq=llp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_lowpass_'+str(llp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "    if (hpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('highpass', freq=hhp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_highpass_'+str(hhp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "    \n",
     "\n",
     "def output(o):\n",
-    "    if (filt):\n",
-    "        trcp = tr.copy()\n",
-    "        trcp.filter('bandpass', freqmin=lp, freqmax=hp, corners=corners, zerophase=zerophase)\n",
-    "        title = site+'_'+pdate+'_bandpass_'+str(lp)+'-'+str(hp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
-    "    else:\n",
+    "    if (nofilt):\n",
     "        title = site+'_'+pdate+'_nofilt'+'_plot-gain_'+str(magn)\n",
-    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')"
+    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "    if (bpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('bandpass', freqmin=blp, freqmax=bhp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_bandpass_'+str(blp)+'-'+str(bhp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "    if (lpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('lowpass', freq=llp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_lowpass_'+str(llp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "    if (hpfilt):\n",
+    "        trcp = tr.copy()\n",
+    "        trcp.filter('highpass', freq=hhp, corners=corners, zerophase=zerophase)\n",
+    "        title = site+'_'+pdate+'_highpass_'+str(hhp)+'_plot-gain_'+str(magn)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = widgets.Select(\n",
@@ -249,23 +317,34 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "#no filter check box\n",
+    "a=widgets.Checkbox(\n",
+    "    description='NF?',\n",
+    "    value=False,\n",
+    "    tooltip='No filtering',\n",
+    "    disabled=False,\n",
+    "    layout=widgets.Layout(width='10%'))\n",
+    "a.observe(nofilter,names='value')\n",
+    "\n",
+    "#bandpass check box\n",
     "f=widgets.Checkbox(\n",
-    "    description='Filter?',\n",
+    "    description='BP?',\n",
     "    value=False,\n",
     "    tooltip='Set filtering',\n",
     "    disabled=False,\n",
     "    layout=widgets.Layout(width='10%'))\n",
-    "f.observe(filter,names='value')\n",
+    "f.observe(bpfilter,names='value')\n",
     "\n",
+    "#bandpass slider\n",
     "b=widgets.FloatRangeSlider(\n",
-    "    value=[0.1, 10],\n",
-    "    min=0.05,\n",
+    "    value=[2, 6],\n",
+    "    min=0.5,\n",
     "    max=10,\n",
-    "    step=0.05,\n",
+    "    step=0.5,\n",
     "    description='band-pass:',\n",
     "    disabled=False,\n",
     "    continuous_update=True,\n",
@@ -273,8 +352,58 @@
     "    readout=True,\n",
     "    readout_format='.1f',\n",
     "    slider_color='white')\n",
-    "b.observe(bandpass, names='value')\n",
+    "b.observe(bandpass,names='value')\n",
     "\n",
+    "#lowpass filter check box\n",
+    "d=widgets.Checkbox(\n",
+    "    description='LP?',\n",
+    "    value=False,\n",
+    "    tooltip='Set filtering',\n",
+    "    disabled=False,\n",
+    "    layout=widgets.Layout(width='10%'))\n",
+    "d.observe(lpfilter,names='value')\n",
+    "\n",
+    "#lowpass slider\n",
+    "e=widgets.FloatSlider(\n",
+    "    value=1,\n",
+    "    min=0.01,\n",
+    "    max=2,\n",
+    "    step=0.01,\n",
+    "    description='low-pass:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=True,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='.2f',\n",
+    "    slider_color='white')\n",
+    "e.observe(lowpass, names='value')\n",
+    "\n",
+    "#highpass filter check box\n",
+    "h=widgets.Checkbox(\n",
+    "    description='HP?',\n",
+    "    value=False,\n",
+    "    tooltip='Set filtering',\n",
+    "    disabled=False,\n",
+    "    layout=widgets.Layout(width='10%'))\n",
+    "h.observe(hpfilter,names='value')\n",
+    "\n",
+    "#highpass slider\n",
+    "i=widgets.FloatSlider(\n",
+    "    value=5,\n",
+    "    min=1,\n",
+    "    max=20,\n",
+    "    step=1,\n",
+    "    description='high-pass:',\n",
+    "    disabled=False,\n",
+    "    continuous_update=True,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True,\n",
+    "    readout_format='.1f',\n",
+    "    slider_color='white')\n",
+    "# interact(highpass, i)\n",
+    "i.observe(highpass, names='value')\n",
+    "\n",
+    "#gain slider\n",
     "g=widgets.FloatSlider(\n",
     "    value=1,\n",
     "    min=0.1,\n",
@@ -288,8 +417,6 @@
     "    readout_format='.1f',\n",
     "    slider_color='white')\n",
     "g.observe(gain, names='value')\n",
-    "\n",
-    "widgets.HBox([f,b,g])\n",
     "\n",
     "c=widgets.Button(\n",
     "    description='Show on screen',\n",
@@ -305,7 +432,12 @@
     "    tooltip='Make file copy')\n",
     "o.on_click(output)\n",
     "\n",
-    "widgets.HBox([f, b, g, c, o])"
+    "box0 = HBox([a,g]) #no filter\n",
+    "box1 = HBox([f,b,g]) #bandpass\n",
+    "box2 = HBox([d,e,g]) #lowpass\n",
+    "box3 = HBox([h,i,g]) #highpass\n",
+    "box_view = widgets.HBox([c,o])\n",
+    "VBox([box0, box1, box2, box3, box_view])\n"
    ]
   }
  ],
@@ -325,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "widgets": {
    "state": {
@@ -341,5 +473,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
