stream list is sorted

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -143,7 +143,15 @@
     "size = (xsize,ysize)\n",
     "\n",
     "#large trace clip\n",
-    "clip = 100000"
+    "clip = 100000\n",
+    "\n",
+    "#possible streams to select\n",
+    "streams = ['WIZ.30.HDF.NZ', 'WIZ.31.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', \n",
+    "        'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', \n",
+    "        'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ']\n",
+    "#sort and add hint as first element\n",
+    "streams.sort()\n",
+    "streams.insert(0, 'select stream')"
    ]
   },
   {
@@ -292,7 +300,9 @@
    "outputs": [],
    "source": [
     "s = widgets.Select(\n",
-    "    options=['select stream', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', 'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ'],\n",
+    "#     options=['select stream', 'WIZ.30.HDF.NZ', 'WIZ.31.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', 'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ'],\n",
+    "    options=streams,\n",
+    "\n",
     "    value='select stream',\n",
     "    description='Stream:',\n",
     "    disabled=False\n",
