HDF streams can now be plotted

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -50,6 +50,7 @@
     "from IPython.display import HTML\n",
     "from obspy.core import UTCDateTime, Stream\n",
     "from obspy.clients.fdsn import Client\n",
+    "from obspy.signal.detrend import spline\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from ipywidgets import interact, interactive, fixed, interact_manual\n",
@@ -124,18 +125,19 @@
     "hpfilt = False\n",
     "corners = 2\n",
     "zerophase = False\n",
-    "defscale = 1e4\n",
-    "# defscale_acou = 1e2\n",
-    "scale = defscale\n",
+    "\n",
+    "defscale_seis = 1e4\n",
+    "defscale_acou = 0.5\n",
     "magn = 1\n",
     "\n",
     "#the next default filter values are set in widget functions. but if the default frequencies are not altered\n",
     "#they are not set\n",
-    "global blp, bhp, llp, hhp #don't like this but not sure better solution as need visible in a function\n",
+    "global blp, bhp, llp, hhp, hdfhp #don't like this but not sure better solution as need visible in a function\n",
     "blp = 2\n",
     "bhp = 6\n",
     "llp = 1\n",
     "hhp = 5\n",
+    "hdfhp = 0.01\n",
     "\n",
     "#size ratio to match aspect ratio of print paper\n",
     "xsize = 3200\n",
@@ -143,10 +145,11 @@
     "size = (xsize,ysize)\n",
     "\n",
     "#large trace clip\n",
-    "clip = 100000\n",
+    "clip_seis = 100000\n",
+    "clip_acou = 2\n",
     "\n",
     "#possible streams to select\n",
-    "streams = ['WIZ.30.HDF.NZ', 'WIZ.31.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', \n",
+    "streams = ['WSRZ.30.HDF.NZ', 'WIZ.30.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', \n",
     "        'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', \n",
     "        'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ']\n",
     "#sort and add hint as first element\n",
@@ -175,7 +178,7 @@
     "  pdate = date.strftime(\"%Y%m%d\")\n",
     "  \n",
     "def retrieve(r):\n",
-    "    global tr\n",
+    "    global tr, scale\n",
     "    time = UTCDateTime(pdate)\n",
     "    try:\n",
     "        client = Client(arc_client)\n",
@@ -197,12 +200,23 @@
     "    st.remove_sensitivity()\n",
     "    \n",
     "    tr = st[0]\n",
-    "    tr.data *= 1e9 #convert from m/s to nm/s\n",
-    "    tr.data = np.clip(tr.data, clip*-1, clip)\n",
+    "            \n",
+    "    #specific trace management, seismic vs acoustic\n",
+    "    if cmp != 'HDF':\n",
+    "        #seismic\n",
+    "        tr.data *= 1e9 #convert from m/s to nm/s\n",
+    "        tr.data = np.clip(tr.data, clip_seis*-1, clip_seis)\n",
+    "        scale = defscale_seis / magn\n",
+    "    if cmp == 'HDF':\n",
+    "        #acoustic\n",
+    "        tr.detrend(type='linear')\n",
+    "        tr.filter('highpass', freq=hdfhp, corners=corners, zerophase=zerophase)\n",
+    "        tr.data = np.clip(tr.data, clip_acou*-1, clip_acou)\n",
+    "        scale = defscale_acou / magn\n",
     "    print ('data retrieved')\n",
     "    print (tr)\n",
-    "\n",
-    "#no filter\n",
+    "        \n",
+    "    #no filter\n",
     "def nofilter(a):\n",
     "    #no filter check box\n",
     "    global nofilt  \n",
@@ -246,9 +260,12 @@
     "\n",
     "#plot gain\n",
     "def gain(g):\n",
-    "  global magn, scale\n",
-    "  magn = g['new']\n",
-    "  scale = defscale / magn\n",
+    "    global magn, scale\n",
+    "    magn = g['new']\n",
+    "    if cmp != 'HDF':\n",
+    "        scale = defscale_seis / magn\n",
+    "    if cmp == 'HDF':\n",
+    "        scale = defscale_acou / magn\n",
     "\n",
     "def screen(c):\n",
     "    if (nofilt):\n",
@@ -296,13 +313,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "s = widgets.Select(\n",
-    "#     options=['select stream', 'WIZ.30.HDF.NZ', 'WIZ.31.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', 'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', 'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ'],\n",
     "    options=streams,\n",
-    "\n",
     "    value='select stream',\n",
     "    description='Stream:',\n",
     "    disabled=False\n",
@@ -327,7 +344,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -449,6 +466,13 @@
     "box_view = widgets.HBox([c,o])\n",
     "VBox([box0, box1, box2, box3, box_view])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
