larger font for title

--- a/drumplot.ipynb
+++ b/drumplot.ipynb
@@ -148,10 +148,12 @@
     "clip_seis = 100000\n",
     "clip_acou = 2\n",
     "\n",
+    "titlesize = 24\n",
+    "\n",
     "#possible streams to select\n",
     "streams = ['WSRZ.30.HDF.NZ', 'WIZ.30.HDF.NZ', 'TMVZ.10.HHZ.NZ', 'TMVZ.10.HHN.NZ', 'TMVZ.10.HHE.NZ', 'NMEZ.10.EHZ.NZ', 'NBEZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ', \n",
     "        'KHEZ.10.HHZ.NZ', 'ETVZ.10.HHZ.NZ', 'OTVZ.10.HHZ.NZ', 'WIZ.10.HHZ.NZ', 'WSRZ.10.HHZ.NZ', 'MAVZ.10.HHZ.NZ', 'FWVZ.10.HHZ.NZ', 'WHVZ.10.HHZ.NZ', \n",
-    "        'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ']\n",
+    "        'TRVZ.10.HHZ.NZ', 'GLKZ.10.HHZ.NZ', 'KRVZ.10.EHZ.NZ', 'NEZ.11.EHZ.NZ']\n",
     "#sort and add hint as first element\n",
     "streams.sort()\n",
     "streams.insert(0, 'select stream')"
@@ -270,43 +272,43 @@
     "def screen(c):\n",
     "    if (nofilt):\n",
     "        title = site + '_' + pdate + '_nofilt'+'_plot-gain_'+str(magn)\n",
-    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, title_size=titlesize)\n",
     "    if (bpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('bandpass', freqmin=blp, freqmax=bhp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_bandpass_'+str(blp)+'-'+str(bhp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, title_size=titlesize)\n",
     "    if (lpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('lowpass', freq=llp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_lowpass_'+str(llp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, title_size=titlesize)\n",
     "    if (hpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('highpass', freq=hhp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_highpass_'+str(hhp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title)\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, title_size=titlesize)\n",
     "    \n",
     "\n",
     "def output(o):\n",
     "    if (nofilt):\n",
     "        title = site+'_'+pdate+'_nofilt'+'_plot-gain_'+str(magn)\n",
-    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "        tr.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png', title_size=titlesize)\n",
     "    if (bpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('bandpass', freqmin=blp, freqmax=bhp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_bandpass_'+str(blp)+'-'+str(bhp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png', title_size=titlesize)\n",
     "    if (lpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('lowpass', freq=llp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_lowpass_'+str(llp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png', title_size=titlesize)\n",
     "    if (hpfilt):\n",
     "        trcp = tr.copy()\n",
     "        trcp.filter('highpass', freq=hhp, corners=corners, zerophase=zerophase)\n",
     "        title = site+'_'+pdate+'_highpass_'+str(hhp)+'_plot-gain_'+str(magn)\n",
-    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png')\n",
+    "        trcp.plot(type='dayplot', linewidth = 0.3, vertical_scaling_range= scale, size=size, color=('navy','blue','blue','blue'), title=title, outfile=title+'.drum.png', title_size=titlesize)\n",
     "    "
    ]
   },
