Stamen terrain basemap, tweak code for annual count

--- a/ohaaki_report/ohaaki_annual_report.ipynb
+++ b/ohaaki_report/ohaaki_annual_report.ipynb
@@ -28,6 +28,7 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
+    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
@@ -151,8 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startyear = '2018-01-01T00:00:00'\n",
-    "endyear = '2019-01-01T00:00:00'\n",
+    "startyear = '2019-01-01T00:00:00'\n",
+    "endyear = '2020-01-01T00:00:00'\n",
     "\n",
     "#as well as annual data, show number of events since 2010\n",
     "startall = '2010-01-01T00:00:00'"
@@ -191,7 +192,7 @@
    },
    "outputs": [],
    "source": [
-    "eqs.head()"
+    "eqs#.head()"
    ]
   },
   {
@@ -221,13 +222,20 @@
     "fig = plt.figure(dpi=200)\n",
     "\n",
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
-    "ax.add_image(imagery, 14)\n",
+    "ax.add_image(imagery, 13)\n",
     "\n",
     "#hypocentres, symbol size=magnitude squared, as scatter symbol size is symbol area, square gives 'pleasing' image\n",
     "plt.scatter(eqsyr['longitude'], eqsyr[' latitude'], color='red', marker='o', s=eqsyr[' magnitude']**2, transform=ccrs.Geodetic())\n",
+    "\n",
+    "#power station text\n",
+    "geodetic_transform = ccrs.Geodetic()._as_mpl_transform(ax)\n",
+    "text_transform = offset_copy(geodetic_transform, units='dots', y=0)\n",
+    "\n",
+    "plt.text(176.2938, -38.5276, 'OP', verticalalignment='center', horizontalalignment='center', color='black', transform=text_transform, fontsize=4)\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 2)\n",
     "plt.tight_layout()\n",
@@ -263,12 +271,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "eqs[' depth'].groupby(pd.TimeGrouper(freq='A')).count()"
+    "eqs['publicid'].resample('A', label='right', closed='left').count()"
    ]
   }
  ],
@@ -288,9 +294,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
