--- a/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
+++ b/wairakei-tauhara_report/wairakei-tauhara_annual_report.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "    return false;\n",
-    "}"
+    "# %%javascript\n",
+    "# IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "#     return false;\n",
+    "# }"
    ]
   },
   {
@@ -40,10 +40,11 @@
     "import cartopy.crs as ccrs\n",
     "import cartopy.io.img_tiles as cimgt\n",
     "from cartopy.io.img_tiles import OSM\n",
+    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import warnings; warnings.simplefilter('ignore')\n",
     "\n",
-    "%matplotlib inline"
+    "# %matplotlib inline"
    ]
   },
   {
@@ -130,8 +131,8 @@
    "outputs": [],
    "source": [
     "#notebook uses full screen width\n",
-    "from IPython.core.display import display, HTML\n",
-    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+    "# from IPython.core.display import display, HTML\n",
+    "# display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
    ]
   },
   {
@@ -163,8 +164,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "startyear = '2018-01-01T00:00:00'\n",
-    "endyear = '2019-01-01T00:00:00'\n",
+    "startyear = '2019-01-01T00:00:00'\n",
+    "endyear = '2020-01-01T00:00:00'\n",
     "\n",
     "#as well as annual data, show number of events since 1996\n",
     "startall = '1996-01-01T00:00:00'"
@@ -198,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs.head()"
@@ -236,16 +235,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#plot map\n",
     "fig = plt.figure(dpi=200)\n",
     "\n",
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -309,9 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#events M>=3 so can give numbers\n",
@@ -333,16 +329,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#plot events M>=3 so can describe locations\n",
     "fig = plt.figure(dpi=100)\n",
     "\n",
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -371,26 +366,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(nrows=3,ncols=1, sharex=True, figsize=(15,10))\n",
     "\n",
     "mcount = eqsm3.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid,  color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
     "ax1.legend(loc='upper left')\n",
     "ax1.set_ylim([0,3])\n",
     "mcount = eqsm2.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
     "ax2.legend(loc='upper left')\n",
-    "ax2.set_ylim([0,50])\n",
+    "ax2.set_ylim([0,70])\n",
     "mcount = eqs.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
     "ax3.set_xlim([startall,endyear])\n",
@@ -468,17 +461,17 @@
     "\n",
     "mcount = eqshfm3.resample('1M', label='left', closed='left').count()\n",
     "ax1.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax1.bar(mcount.index, mcount.publicid, width = 10, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
+    "ax1.bar(mcount.index, mcount.publicid, color='blue', edgecolor='blue', align='edge', label='M>=3 earthquakes')\n",
     "ax1.legend(loc='upper left')\n",
     "ax1.set_ylim([0,3])\n",
     "mcount = eqshfm2.resample('1M', label='left', closed='left').count()\n",
     "ax2.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax2.bar(mcount.index, mcount.publicid, width = 10, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
+    "ax2.bar(mcount.index, mcount.publicid, color='green', edgecolor='green', align='edge', label='M>=2 earthquakes')\n",
     "ax2.legend(loc='upper left')\n",
-    "ax2.set_ylim([0,50])\n",
+    "ax2.set_ylim([0,70])\n",
     "mcount = eqshf.resample('1M', label='left', closed='left').count()\n",
     "ax3.grid(b=True, which='major', color='b', linestyle='--', alpha=0.5)\n",
-    "ax3.bar(mcount.index, mcount.publicid, width = 10, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
+    "ax3.bar(mcount.index, mcount.publicid, color='red', edgecolor='red', align='edge', label='all earthquakes')\n",
     "ax3.legend(loc='upper left')\n",
     "ax3.set_ylim([0,220])\n",
     "ax3.set_xlim([startall,endyear])\n",
@@ -504,9 +497,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
