magma cpt, better time-axis scaling

--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "#GeoNet's FDSN web servers\n",
     "arc_client = 'http://service.geonet.org.nz'\n",
-    "nrt_client = 'http://beta-service-nrt.geonet.org.nz'"
+    "nrt_client = 'http://service-nrt.geonet.org.nz'"
    ]
   },
   {
@@ -107,8 +107,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = '2018-06-24' #(first date to plot)\n",
-    "date2 = '2018-06-24' #(last date to plot)\n",
+    "date1 = '2020-02-22' #(first date to plot)\n",
+    "date2 = '2020-02-23' #(last date to plot)\n",
     "site = 'MAVZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
@@ -232,15 +232,10 @@
     "x = pd.date_range(start=dstart, end=dend, freq='3min')\n",
     "\n",
     "#array for hourly x-axis ticks/grid\n",
-    "xticks = pd.date_range(start=dstart, end=dend, freq='H')\n",
+    "xticks = pd.date_range(start=dstart, end=dend, freq='3H')\n",
     "\n",
     "#label for every 3 hours, replace other labels with a blank string\n",
-    "xlabels = xticks.strftime('%m-%d/%H:%M')\n",
-    "idx = 0\n",
-    "for val in xlabels:\n",
-    "    if (idx%3 != 0):\n",
-    "        xlabels[idx] = ''\n",
-    "    idx += 1"
+    "xlabels = xticks.strftime('%m-%d/%H:%M')"
    ]
   },
   {
@@ -258,18 +253,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "fig,ax = plt.subplots(figsize=(24,10))\n",
+    "fig,ax = plt.subplots(figsize=(ndays*24,10))\n",
     "\n",
     "if (normalise == 'log'):\n",
-    "    ax.pcolormesh(x, f, z, cmap='seismic', norm=matplotlib.colors.LogNorm(vmin=vmin, vmax=vmax))\n",
+    "    ax.pcolormesh(x, f, z, cmap='magma', norm=matplotlib.colors.LogNorm(vmin=vmin, vmax=vmax))\n",
     "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: LogNorm'\n",
     "if (normalise == 'lin')    :\n",
-    "    ax.pcolormesh(x, f, z, cmap='seismic', norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
+    "    ax.pcolormesh(x, f, z, cmap='magma', norm=matplotlib.colors.Normalize(vmin=vmin, vmax=vmax))\n",
     "    title = 'Time resolution: '+str(win)+' sec, Frequency resolution:'+str(fint)+' Hz, Colour map: Linear'\n",
     "\n",
     "fmt = dates.DateFormatter('%m-%d/%H')\n",
@@ -309,9 +302,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
