--- a/mercury/ngatamariki_annual_report.ipynb
+++ b/mercury/ngatamariki_annual_report.ipynb
@@ -38,6 +38,7 @@
     "from cartopy.io.img_tiles import OSM\n",
     "#from cartopy.io.img_tiles import StamenTerrain\n",
     "from cartopy.io.img_tiles import QuadtreeTiles\n",
+    "from cartopy.io.img_tiles import Stamen\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -253,20 +254,20 @@
    "outputs": [],
    "source": [
     "start = '2012-05-15T00:00:00'\n",
-    "thisrpt = '2018-01-01T00:00:00'\n",
-    "end = '2019-01-01T00:00:00'\n",
+    "thisrpt = '2019-01-01T00:00:00'\n",
+    "end = '2020-01-01T00:00:00'\n",
     "\n",
     "geonetstart = '2005-01-01T00:00:00'\n",
     "commission = '2013-09-15T00:00:00'\n",
     "wellstart = '2012-05-15T00:00:00'\n",
     "\n",
     "#previous report period\n",
-    "lastrpt = '2017-01-01T00:00:00'\n",
-    "lastend = '2018-01-01T00:00:00'\n",
+    "lastrpt = '2018-01-01T00:00:00'\n",
+    "lastend = '2019-01-01T00:00:00'\n",
     "\n",
     "#report period before that\n",
-    "last2rpt = '2016-01-01T00:00:00'\n",
-    "last2end = '2017-01-01T00:00:00'"
+    "last2rpt = '2017-01-01T00:00:00'\n",
+    "last2end = '2018-01-01T00:00:00'"
    ]
   },
   {
@@ -356,16 +357,15 @@
    "outputs": [],
    "source": [
     "#this file needs to be kept up to date as new data are processed\n",
-    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')\n",
+    "# hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7,8], parse_dates={\"ot\" : ['YYYY-MM-DD','hh:mm:sec']}, index_col='ot')\n",
+    "hypdd = pd.read_csv('rotnga_hypodd_all.csv', usecols=[3,4,5,6,7], parse_dates=True, index_col='ot')\n",
     "hypdd.sort_index(inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print (hypdd.head())\n",
@@ -439,9 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "hyprpt['ml'].describe()"
@@ -504,7 +502,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = QuadtreeTiles()\n",
+    "# imagery = QuadtreeTiles()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([lonmin, lonmax, latmin, latmax])\n",
     "ax.add_image(imagery, 14)\n",
@@ -547,6 +546,9 @@
     "    plt.text(row['lon'], row['lat'], row['name'], verticalalignment='top', color='white', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
     "#section line\n",
     "plt.plot([176.1742,176.2024], [-38.5260,-38.5730], color='black', linestyle='--', marker='None', transform=ccrs.Geodetic())\n",
+    "\n",
+    "#power station, needed for some map bases\n",
+    "plt.text(lonref, latref, 'PS', verticalalignment='center_baseline', color='black', horizontalalignment='center', transform=text_transform, fontsize=4)\n",
     "\n",
     "scale_bar(ax, ccrs.Mercator(), 1)\n",
     "\n",
@@ -599,10 +601,11 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = QuadtreeTiles()\n",
+    "# imagery = QuadtreeTiles()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([northlonmin, northlonmax, northlatmin, northlatmax])\n",
-    "ax.add_image(imagery, 16)\n",
+    "ax.add_image(imagery, 15)\n",
     "\n",
     "#hypocentres, symbol coloured is determined by magnitude, with a constant symbol size\n",
     "#plot in order of increasing magnitude so larger events plot on top\n",
@@ -687,10 +690,11 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = QuadtreeTiles()\n",
+    "# imagery = QuadtreeTiles()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([southlonmin, southlonmax, southlatmin, southlatmax])\n",
-    "ax.add_image(imagery, 16)\n",
+    "ax.add_image(imagery, 15)\n",
     "\n",
     "#hypocentres, symbol coloured is determined by magnitude, with a constant symbol size\n",
     "#plot in order of increasing magnitude so larger events plot on top\n",
@@ -850,7 +854,8 @@
     "well09 = pd.read_csv('well_section_09.dat', sep='\\s+', names=names)\n",
     "well10 = pd.read_csv('well_section_10.dat', sep='\\s+', names=names)\n",
     "well11 = pd.read_csv('well_section_11.dat', sep='\\s+', names=names)\n",
-    "well12 = pd.read_csv('well_section_12.dat', sep='\\s+', names=names)"
+    "well12 = pd.read_csv('well_section_12.dat', sep='\\s+', names=names)\n",
+    "well13 = pd.read_csv('well_section_13.dat', sep='\\s+', names=names)"
    ]
   },
   {
@@ -886,11 +891,12 @@
     "plt.plot(well10['p'], well10['z'], color='black')\n",
     "plt.plot(well11['p'], well11['z'], color='black')\n",
     "plt.plot(well12['p'], well12['z'], color='black')\n",
+    "plt.plot(well13['p'], well13['z'], color='black')\n",
     "#well labels\n",
     "plt.text(-2.1, 0.1, 'NM01', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(-1.45, 0.1, 'NM02', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(-0.85, 0.1, 'NM03', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
-    "plt.text(-2.7, 0.1, 'NM04', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
+    "plt.text(-2.73, 0.1, 'NM04', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(0.9, 0.1, 'NM05', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(2.05, 0.1, 'NM06', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(-0.4, 0.1, 'NM07', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
@@ -899,6 +905,7 @@
     "plt.text(1.9, 0.1, 'NM10', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(0.75, 0.1, 'NM11', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "plt.text(0.2, 0.1, 'NM12', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
+    "plt.text(-0.12, 0.1, 'NM13', verticalalignment='bottom', horizontalalignment='left', rotation='vertical', fontsize=8)\n",
     "#section orientations\n",
     "plt.text(-2.9, -0, 'N', verticalalignment='bottom', horizontalalignment='left', fontsize=10)\n",
     "plt.text(2.9, -0, 'S', verticalalignment='bottom', horizontalalignment='right', fontsize=10)\n",
@@ -932,9 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
@@ -944,12 +949,12 @@
     "hyprptsouth = hyprpt[hyprpt['latitude']<-38.546]\n",
     "\n",
     "#magnitude vs time\n",
-    "ax = hyprptnorth.plot(y='ml', color='red', marker='o', linewidth=0.3, linestyle='None', label='north', figsize=(10,5))\n",
-    "hyprptsouth.plot(ax=ax, y='ml', color='black', marker='o', linewidth=0.3, linestyle='None', label='south')\n",
+    "ax = hyprptnorth.plot(y='ml', color='red', marker='o', markersize=3.5, linewidth=0.3, linestyle='None', label='north', figsize=(10,5))\n",
+    "hyprptsouth.plot(ax=ax, y='ml', color='black', marker='o', markersize=3.5, linewidth=0.3, linestyle='None', label='south')\n",
     "ax.xaxis.grid()\n",
     "ax.yaxis.grid()\n",
     "\n",
-    "ax.set_ylim([0,3.0])\n",
+    "ax.set_ylim([0,3.5])\n",
     "ax.set_xlim([thisrpt,end])\n",
     "ax.set_ylabel('Magnitude')\n",
     "ax.tick_params(labelright = True)\n",
@@ -1025,7 +1030,8 @@
     "ax1.xaxis.grid()\n",
     "ax1.yaxis.grid()\n",
     "ax1.set_ylim([0,4.2])\n",
-    "ax1.set_xlim(start, end)\n",
+    "\n",
+    "ax1.set_xlim([start,end])\n",
     "ax1.set_ylabel('Magnitude', fontsize=16)\n",
     "ax1.tick_params(labelright = True)\n",
     "\n",
@@ -1041,7 +1047,7 @@
     "ax2.set_ylim([0,nmax])\n",
     "\n",
     "#plot labels\n",
-    "ax2.text('2012-06-01', 1500, 'B', size=16)\n",
+    "ax2.text('2012-06-01', 1750, 'B', size=16)\n",
     "\n",
     "ax2.xaxis.grid()\n",
     "ax2.yaxis.grid()\n",
@@ -1056,6 +1062,7 @@
     "ax3.tick_params(axis='y', colors='blue')\n",
     "ax3.set_ylabel('Percent cumulative energy', color = 'blue', fontsize=16)\n",
     "ax3.set_ylim(0,100)\n",
+    "ax3.set_xlim([start,end])\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.savefig('mercury_long-term_time-series.png', dpi=200)"
@@ -1102,12 +1109,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "an = annual.plot.bar(color=['blue', 'red', 'black'])\n",
+    "an = annual.plot.bar(color=['blue', 'red', 'black'], width=0.5, alpha=0.7)\n",
     "an.set_ylabel('Number per year')\n",
     "an.set_xlabel('Year')\n",
     "\n",
@@ -1148,7 +1153,8 @@
    "outputs": [],
    "source": [
     "#imagery\n",
-    "imagery = OSM()\n",
+    "# imagery = OSM()\n",
+    "imagery = Stamen('terrain-background')\n",
     "ax = plt.axes(projection=imagery.crs)\n",
     "ax.set_extent([wlonmin, wlonmax, wlatmin, wlatmax])\n",
     "ax.add_image(imagery, 10)\n",
@@ -1305,9 +1311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eqs5['dist'].describe()"
@@ -1501,9 +1505,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
