ensure npts/s is an integer value

--- a/ssam/ssam.ipynb
+++ b/ssam/ssam.ipynb
@@ -107,9 +107,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date1 = '2020-02-22' #(first date to plot)\n",
-    "date2 = '2020-02-23' #(last date to plot)\n",
-    "site = 'MAVZ.10.HHZ.NZ'\n",
+    "date1 = '2020-07-04' #(first date to plot)\n",
+    "date2 = '2020-07-05' #(last date to plot)\n",
+    "site = 'WIZ.10.HHZ.NZ'\n",
     "normalise = 'log'\n",
     "#normalise = 'lin'"
    ]
@@ -206,7 +206,7 @@
     "     trf = rfft(data*tap)\n",
     "     a = abs(trf[1:])\n",
     "     #calculate frequencies for fft\n",
-    "     freq = np.linspace(0,nyq,npts/2)\n",
+    "     freq = np.linspace(0,nyq,int(npts/2))\n",
     "     #interpolate to 0.1 Hz (lower resolution)\n",
     "     f = np.arange(0.1,nyq,0.1) #0.1 Hz frequencies\n",
     "     da = np.interp(f, freq, a)\n",
